Fixed ng-click mouse hover cursor not showing the pointer.  Also made resume the default page.

--- a/less/theme2.less
+++ b/less/theme2.less
@@ -418,6 +418,11 @@ td {
     padding: 5px 0 5px 0;
 }
 
+[ng-click],
+[data-ng-click],
+[x-ng-click] {
+    cursor: pointer;
+}
 
 // CSS3
 
